Fix disapearing magnifying glass icon on iOS.

--- a/resources/assets/js/Collection/Filters/MobileSearch.scss
+++ b/resources/assets/js/Collection/Filters/MobileSearch.scss
@@ -74,6 +74,7 @@
     height: 50px;
     width: 50px;
     background-color: #fff;
+    color: #000;
     border: none;
     margin: 0;
     padding: 0;
